Fix #libraryForm calss overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1755,10 +1755,6 @@ a {
   padding-left: 5px;
 }
 
-#libraryForm {
-  width: 360px;
-}
-
 .right {
   width: 100%;
   padding-left: 55px;
